@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.124 2005/04/27 10:00:18 ph10 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.125 2005/04/27 10:06:00 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -236,6 +236,8 @@ PH/38 Installed a patch from Ian Freislich, with the agreement of Tom Kistner.
       connection it has accepted, or it never writes response data. The exiscan
       spam.[ch] uses a 3600 second timeout on spamd socket reads, further, it
       blindly assumes that writes won't block so it may never time out."
+
+PH/39 Allow G after quota size as well as K and M.
 
 
 A note about Exim versions 4.44 and 4.50
